src/main/java/com/example/demo/model/error/IllegalActionException.java
package com.example.demo.model.error;

public class IllegalActionException extends RuntimeException {
    public IllegalActionException(String message) {
        super(message);
    }
}
